@@ -1,3 +1,14 @@
+2007-10-28  Jens Granseuer  <jensgr@gmx.net>
+
+	* main.c: (display_rotation_from_text), (get_current_resolution),
+	(get_current_rate), (get_current_rotation), (wrap_in_label),
+	(resolution_changed_callback), (generate_rate_menu),
+	(generate_resolution_menu), (initialize_combo_layout),
+	(create_rate_menu), (create_rotate_menu), (create_screen_widgets),
+	(create_dialog), (save_timeout_callback), (run_revert_dialog),
+	(save_to_gconf), (cb_dialog_response), (main): whitespace cleanup and a
+	few minor tweaks
+
 2007-10-27  Jens Granseuer  <jensgr@gmx.net>
 
 	* main.c: (free_display_info), (update_display_info),
